[project]
name = "grc-rcm-gate"
version = "0.1.0"
description = "RCM Gate Infrastructure — audit backbone for the Reverse Mapping Methodology pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "sqlalchemy==2.0.36",
    "python-multipart==0.0.20",
    "grc-shared[fastapi]",
]

[tool.uv.sources]
grc-shared = { path = "grc-shared-lib", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
